# onomondo-uicc

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  Makefile.am  README.md  configure.ac
.github/: renovate.json
.github/workflows/: c-cpp.yml  ci_uicc.yml  ci_uicc_extended.yml  clang-format.yml  cmake-build.yml  lint-commits.yml  pr_commit_checks.yml  release_please.yml
files/: 3f00.def
files-c-array/: ss_static_files_bin.c  toCArray.py
files-creation/: all.pysim  softsim_create_files.pysim  softsim_fill_files_efarr.pysim  softsim_fill_files_mf.pysim  softsim_fill_files_usim.pysim
files/3f00/: 2f00  2f00.def  2f05  2f05.def  2f06  2f06.def  2f08  2f08.def  2fe2  2fe2.def  5f100001  5f100001.def  7ff0.def  a001  a001.def  a002  a002.def  a003  a003.def  a004  a004.def  a005  a005.def  a100.def  a120  a1df1d01  a1df1d01.def
files/3f00/7ff0/: 5f100001  6f05.def  6f06.def  6f07  6f07.def  6f08  6f08.def  6f09.def  6f31.def  6f38  6f38.def  6f42  6f42.def  6f5b  6f5b.def  6f5c.def  6f73  6f73.def  6f78  6f78.def  6f7b.def  6f7e  6f7e.def  6fad  6fad.def  6fb7  6fb7.def  6fc4.def  6fe3  6fe3.def  6fe4  6fe4.def
gscriptor/: chv_change_test.scriptor  chv_test.scriptor  chv_unblock_test.scriptor  create_delete_file_test.scriptor  proactive_sim_ota_sms.scriptor  read_binary_test.scriptor  read_record_test.scriptor  search_record_test.scriptor  select_test.scriptor  terminal_profile.scriptor  update_binary_test.scriptor  update_record_test.scriptor
include/: Makefile.am
include/onomondo/: Makefile.am
include/onomondo/softsim/: Makefile.am  config.h  crypto.h  file.h  fs.h  list.h  log.h  mem.h  softsim.h  storage.h  utils.h
include/onomondo/utils/: ss_crypto_extension.h  ss_profile.h  ss_provision.h
src/: CMakeLists.txt
src/softsim/: CMakeLists.txt  Makefile.am  fs.c  main.c  storage.c  storage_compact.c
src/softsim/crypto/: CMakeLists.txt  Makefile.am  aes-encblock.c  common.h  crypto.h  des_i.h
src/softsim/milenage/: CMakeLists.txt  Makefile.am  milenage.c  milenage.h  milenage_usim.c  milenage_usim.h
src/softsim/uicc/: CMakeLists.txt  Makefile.am  access.c  access.h  apdu.c  apdu.h  btlv.h  btlv_dec.c  btlv_enc.c  btlv_utils.c  command.c  command.h  context.h  ctlv.c  ctlv.h  df_name.c  df_name.h  fcp.c  fcp.h  file.c  fs.c  fs.h  fs_chg.c  fs_chg.h  fs_utils.c  fs_utils.h  log.c  proactive.c  proactive.h  sfi.c  sfi.h  sms.c  sms.h  softsim.c  sw.c  sw.h  tlv8.c  tlv8.h  uicc_admin.c  uicc_admin.h  (+29 more)
tests/: CMakeLists.txt  Makefile.am  testsuite.at
tests/aes/: CMakeLists.txt  Makefile.am  aes_test.c  aes_test.ok
tests/apdu/: CMakeLists.txt  Makefile.am  apdu_test.c  apdu_test.ok
tests/app_transact/: CMakeLists.txt  app_transact_test.c  extended_apdu_reject_test.c
tests/btlv/: CMakeLists.txt  Makefile.am  btlv_test.c  btlv_test.err
tests/ctlv/: CMakeLists.txt  Makefile.am  ctlv_test.c  ctlv_test.err
tests/des/: CMakeLists.txt  Makefile.am  des_test.c  des_test.ok
tests/envelope/: CMakeLists.txt  envelope_test.c  envelope_test.ok
tests/fcp/: CMakeLists.txt  Makefile.am  fcp_test.c  fcp_test.ok
tests/init/: CMakeLists.txt  init_test.c  init_test.ok
tests/list/: CMakeLists.txt  Makefile.am  list_test.c  list_test.ok
tests/ota/: CMakeLists.txt  Makefile.am  ota_test.c  ota_test.ok
tests/pin/: CMakeLists.txt  pin_test.c  pin_test.ok
tests/sms/: CMakeLists.txt  Makefile.am  sms_test.c  sms_test.ok
tests/storage/: CMakeLists.txt  storage_compact_test.c  storage_compact_test.ok  storage_test.c  storage_test.ok
tests/suspend/: CMakeLists.txt  suspend_test.c  suspend_test.ok
tests/tlv8/: CMakeLists.txt  Makefile.am  tlv8_test.c  tlv8_test.err
tests/utils/: CMakeLists.txt  Makefile.am  profile_decode_test.c  profile_decode_test.ok  profile_provision_test.c  profile_provision_test.ok  utils_test.c  utils_test.ok
utils/: CMakeLists.txt  ss_crypto_extension.c  ss_profile.c  ss_provision.c
utils/files-c-array/: ss_static_files_bin.c  ss_static_files_bin.h  ss_static_files_hex.c  ss_static_files_hex.h  toCArray.py
utils/files-creation/: softsim_create_files.pysim  softsim_create_files_minimal.pysim  softsim_fill_files_mf.pysim
