# Copyright (c) 2024 Onomondo ApS. All rights reserved.
# SPDX-License-Identifier: GPL-3.0-only

# Enable testing for current directory and below.
enable_testing()

add_subdirectory(aes)
add_subdirectory(apdu)
add_subdirectory(app_transact)
add_subdirectory(btlv)
add_subdirectory(ctlv)
add_subdirectory(des)
add_subdirectory(fcp)
add_subdirectory(list)
add_subdirectory(ota)
add_subdirectory(sms)
add_subdirectory(tlv8)
add_subdirectory(utils)
